# FreeRTOS

./: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  main.c
kernel/include/: portable.h
project/include/: app.h
project/src/: app.c
